--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "author": "Enes Taha Sari",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
-    "mongoose": "^6.2.5",
+    "mongoose": "^6.0.0",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
