--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.2",
     "connect-mongo": "^4.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "express-session": "^1.17.2",
     "i": "^0.3.7",
-    "mongoose": "^6.0.0",
+    "mongoose": "^5.10.0",
     "npm": "^8.5.5",
     "slugify": "^1.6.5"
   },
